src/sass/60_components/_components.team.scss
.c-team {
  $c-team: &;

  &__container {
    @include media-breakpoint-down(sm) {
      max-width: 100vw;
    }
  }

  &__row {
    display: flex;
    gap: 2rem 0;
    @include media-breakpoint-up(xl) {
      gap: 3.5rem 0;
    }
  }

  &__content {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    gap: 1.5rem 0;
  }

  &__headline {
  }

  &__text {
  }

  &__members {
    display: grid;
    grid-template-columns: 1fr;
    gap: 1rem;
    @include media-breakpoint-up(md) {
      grid-template-columns: repeat(2, minmax(0, 1fr));
    }
    @include media-breakpoint-up(xxl) {
      grid-template-columns: repeat(3, minmax(0, 1fr));
    }
  }

  &__slider {
    margin: 0;
    margin-bottom: 5rem;
    overflow: visible;
    padding-right: 0;
    padding-left: 0;
    width: 100vw;

    @include media-breakpoint-up(xl) {
      margin-bottom: 1rem;
    }

    .c-slider__track {
      contain: layout;
      overflow: visible;
    }
  }

  &__buttons {
    justify-content: center;
    @include media-breakpoint-up(xl) {
      max-width: 66.6666666667%;
    }
  }
}

